service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-service
spec:
  type: ClusterIP
  selector:
    app: podinfo
  ports:
  - port: 9898
    targetPort: 9898
